opam-version: "2.0"
name: "agave-generator"
version: "0.3.7"
synopsis: "Minimal markdown to HTML static site generator"
description: """
Minimal markdown to HTML for static sites with pretty URLs.
"""
maintainer: "John <jottenlips@gmail.com>"
authors: "John <jottenlips@gmail.com>"
license: "Hippocratic-2.1"
homepage: "https://github.com/jottenlips/agave"
bug-reports: "https://github.com/jottenlips/agave/issues"
dev-repo: "git+https://github.com/jottenlips/agave.git"
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.0"}
  "reason" {>= "3.10.0"}
  "cmdliner" {>= "1.3.0"}
  "bos" {>= "0.2.0"}
  "omd" {>= "2.0.0~alpha3"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
